Basic support for encoding DELTA_BYTE_ARRAY

TODO: read corrupted files written with bug(PARQUET-246)